--- a/plugins/widgetbootstrap/contents.css
+++ b/plugins/widgetbootstrap/contents.css
@@ -124,3 +124,31 @@
 .accordion dd.accordion-navigation>a p {
 	margin: 0;
 }
+
+.panel {
+  padding: 8px;
+  margin: 10px auto;
+  background: #eee;
+  border-radius: 8px;
+  border: 1px solid #ddd;
+  box-shadow: 0 1px 1px #fff inset, 0 -1px 0px #ccc inset;
+  display: inline-block;
+}
+.panel-heading.box-title {
+  box-shadow: 0 1px 1px #ddd inset;
+  border: 1px solid #cccccc;
+  border-radius: 5px;
+  background: #fff;
+  margin-bottom: 5px;
+  display: inline-block;
+  width: 100%;
+}
+.panel-body.box-content {
+  box-shadow: 0 1px 1px #ddd inset;
+  border: 1px solid #cccccc;
+  border-radius: 5px;
+  background: #fff;
+  min-height: 5em;
+  display: inline-block;
+  width: 100%;
+}
