--- a/plugins/widgetbootstrap/contents.css
+++ b/plugins/widgetbootstrap/contents.css
@@ -132,7 +132,8 @@
   border-radius: 8px;
   border: 1px solid #ddd;
   box-shadow: 0 1px 1px #fff inset, 0 -1px 0px #ccc inset;
-  display: inline-block;
+  display: block;
+  overflow: hidden;
 }
 .panel-heading.box-title {
   box-shadow: 0 1px 1px #ddd inset;
